--- a/node-shop-project/views/shop/cart.ejs
+++ b/node-shop-project/views/shop/cart.ejs
@@ -1,22 +1,31 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <% if(products.length >0){ %>
-            <ul>
-                <% products.forEach((p)=>{ %>
-                    <li> 
-                        <p> <%= p.productData.title %> (<%=p.quantity%>) </p>
-                        <form action="/delete-cart-item" method="POST">
-                        <input type="text" name="productId" id="productId" value="<%=p.productData.id%>" hidden>
-                        <button type="submit" class="btn">Delete</button>
-                        </form>
-                    </li>
-                <%}); %>
-            </ul>
-        <% } else {  %>
-            <h1>No products in cart!</h1>
-        <% } %>
+        <main>
+            <% if(products.length >0){ %>
+                <ul class="cart__item-list">
+                    <% products.forEach((p)=>{ %>
+                        <li class="cart__item"> 
+                            <h1> <%= p.title %> (<%=p.cartItem.quantity%>) </h1>
+                            <form action="/delete-cart-item" method="POST">
+                            <input type="text" name="productId" id="productId" value="<%=p.id%>" hidden>
+                            <button type="submit" class="btn">Delete</button>
+                            </form>
+                        </li>
+                    <%}); %>
+                </ul>
+                <hr>
+                <div class="centered">
+                    <form method="POST" action="create-order">
+                        <button type="submit" class="btn">Order Now!</button>
+                    </form>
+                </div>
+            <% } else {  %>
+                <h1>No products in cart!</h1>
+            <% } %>
+        </main>
 
         <%- include('../includes/end.ejs') %>
